# my-room-virtual-reality

./: .gitignore  .main.cpp.swp  CMakeLists.txt  README.md  main.cpp  main_server.cpp
apps/: cave.cpp  desktop.cpp
doc/: how-to-build.md
includes/: PathSettings.hpp  Scene.hpp
includes/magicvr/: AppControllerWithWandSupport.hpp  MagicVrDesktopGlutFramework.hpp
includes/myroom/: AppController.hpp  AppControllerWithWandSupport.hpp  AppModel.hpp  ComponentTransformNode.hpp  DrawingDirection.hpp  ExitGlut.hpp  MagicVrDesktopGlutFramework.hpp  MyRoomCaveGlutFramework.hpp  MyRoomDesktopGlutFramework.hpp  SimpleSceneManagerNavigator.hpp  Spiral.hpp  background.hpp
includes/myroom/animation/: Animation.hpp  AnimationChildNode.hpp  AnimationContainer.hpp  AnimationNode.hpp  BezierAnimation.hpp  BezierCurve.hpp  BezierTranslationAnimation.hpp  BezierTranslationAnimationNode.hpp  BubbleAnimation.hpp  EaseAnimation.hpp  EaseInAnimation.hpp  EaseInOutAnimation.hpp  EaseOutAnimation.hpp  FracTimeAnimation.hpp  MaxTimeAnimation.hpp  OnStopAnimation.hpp  OnStopRefAnimation.hpp  ParallelAnimation.hpp  ScaleAnimation.hpp  SequentialAnimation.hpp  SharedRefAnimationContainer.hpp  TranslationAnimation.hpp
includes/myroom/node/: MovableNode.hpp  TrajectoryContainerNode.hpp  TrajectoryNode.hpp  WandNode.hpp  node.hpp
includes/myroom/util/: clamp.hpp  color.hpp  transformation.hpp  vectorToString.hpp
models/TableNew/TableNew/: resturantTable.mtl
models/TableNew/__MACOSX/: ._TableNew
sources/: Scene.cpp
sources/magicvr/: AppController.cpp  AppControllerWithWandSupport.cpp  MagicVrDesktopGlutFramework.cpp
sources/magicvr/node/: WandNode.cpp
sources/myroom/: AppController.cpp  AppControllerWithWandSupport.cpp  AppModel.cpp  ComponentTransformNode.cpp  GlutFramework.cpp  MagicVrCaveGlutFramework.cpp  MagicVrDesktopGlutFramework.cpp  MyRoomCaveGlutFramework.cpp  MyRoomDesktopGlutFramework.cpp  SimpleSceneManagerNavigator.cpp  Spiral.cpp  background.cpp
sources/myroom/animation/: Animation.cpp  AnimationChildNode.cpp  AnimationContainer.cpp  BezierAnimation.cpp  BezierTranslationAnimation.cpp  BezierTranslationAnimationNode.cpp  BubbleAnimation.cpp  EaseAnimation.cpp  EaseInAnimation.cpp  EaseInOutAnimation.cpp  EaseOutAnimation.cpp  FracTimeAnimation.cpp  MaxTimeAnimation.cpp  OnStopAnimation.cpp  ParallelAnimation.cpp  (+5 more)
(+7 files in other folders)
